staging veritas 7.x and citrix 8.x content for review

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -159,3 +159,11 @@ entries:
           url: /hu_ol_65.html
         - title: 6.4
           url: /hu_ol_64.html
+    - title: Citrix
+      entries:
+      - title: 8.x
+        url: /hu_citrix_8x.html 
+    - title: Veritas
+      entries:
+      - title: 7.x
+        url: /hu_veritas_7x.html
