--- a/sidebar.yml
+++ b/sidebar.yml
@@ -161,9 +161,9 @@ entries:
           url: /hu_ol_64.html
     - title: Citrix
       entries:
-      - title: 8.x
-        url: /hu_citrix_8x.html 
+      - title: Hypervisor 8 and later
+        url: /hu_citrix_8x.html
     - title: Veritas
       entries:
-      - title: 7.x
+      - title: Infoscale 7.4 series
         url: /hu_veritas_7x.html
