--- a/sidebar.yml
+++ b/sidebar.yml
@@ -163,3 +163,7 @@ entries:
       entries:
       - title: Hypervisor 8 and later
         url: /hu_citrix_8x.html
+    - title: Veritas
+      entries:
+      - title: Infoscale 7.3 and 7.3.1
+        url: /hu_veritas_73.html  
