Adding links to sidebar for FC/iSCSI Windows 2019, 2016, and 2012r2; AIX 7.2; HP-UX 11i v3; Solaris 11.4

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -166,4 +166,24 @@ entries:
     - title: Veritas
       entries:
       - title: Infoscale 7.3 and 7.3.1
-        url: /hu_veritas_73.html  
+        url: /hu_veritas_73.html
+    - title: Windows
+      entries:
+      - title: 2019
+        url: /hu_windows_2019.html
+      - title: 2016
+        url: /hu_windows_2016.html
+      - title: "2012 R2"
+        url: /hu_windows_2012r2.html
+    - title: AIX
+      entries:
+      - title: 7.2
+        url: /hu_aix_72.html
+    - title: HP-UX
+      entries:
+      - title: 11i v3
+        url: /hu_hpux_11iv3.html
+    - title: Solaris
+      entries:
+      - title: 11.4
+        url: /hu_solaris_114.html              
