Adding Oracle Linux 7.9 to the sidebar

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -125,6 +125,8 @@ entries:
           url: /hu_ol_80.html
       - title: OL 7
         entries:
+        - title: 7.9
+          url: /hu_ol_79.html
         - title: 7.8
           url: /hu_ol_78.html
         - title: 7.7
@@ -166,4 +168,4 @@ entries:
     - title: Veritas
       entries:
       - title: Infoscale 7.3 and 7.3.1
-        url: /hu_veritas_73.html  
+        url: /hu_veritas_73.html
