--- a/sidebar.yml
+++ b/sidebar.yml
@@ -1,6 +1,10 @@
 entries:
   - title: Home
     url: /index.html
+  - title: SAN Host Utilities
+    entries:
+    - title: Linux Unified Host Utlities
+      url: /hu_luhu_71.html    
   - title: NVMe/FC Host Configurations
     entries:
     - title: RHEL
@@ -37,12 +41,12 @@ entries:
         url: /nvme_windows_2016.html
       - title: "2012 R2"
         url: /nvme_windows_2012r2.html
-  - title: FC/iSCSI Host Configurations
+  - title: FCP and iSCSI Host Configurations
     entries:
     - title: Linux Unified Host Utilites
       entries:
       - title: 7.1
-        url: /hu_luhu_71.html   
+        url: /hu_luhu_71.html
     - title: RHEL
       entries:
       - title: RHEL 8
