AIX 7.2 feedback incorporated

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -175,9 +175,9 @@ entries:
         url: /hu_windows_2016.html
       - title: "2012 R2"
         url: /hu_windows_2012r2.html
-    - title: AIX
+    - title: AIX/PowerVM and VIOX
       entries:
-      - title: 7.2
+      - title: 7.2/3.1
         url: /hu_aix_72.html
     - title: HP-UX
       entries:
@@ -186,4 +186,4 @@ entries:
     - title: Solaris
       entries:
       - title: 11.4
-        url: /hu_solaris_114.html              
+        url: /hu_solaris_114.html
