Aherbin - Adding CentOS 8 and Centos 7 to the sidebar

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -173,3 +173,17 @@ entries:
       entries:
       - title: Infoscale 7.3 and 7.3.1
         url: /hu_veritas_73.html
+    - title: CentOS
+      entries:
+      - title: CentOS 8
+        entries:
+        - title: 8.3
+          url: /hu_centos_83.html
+        - title: 8.2
+          url: /hu_centos_82.html
+      - title: CentOS 7
+        entries:
+        - title: 7.9
+          url: /hu_centos_79.html
+        - title: 7.8
+          url: /hu_centos_78.html
