Incorporating review feedback

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -175,7 +175,7 @@ entries:
         url: /hu_windows_2016.html
       - title: "2012 R2"
         url: /hu_windows_2012r2.html
-    - title: AIX/PowerVM and VIOX
+    - title: AIX and PowerVM/VIOS
       entries:
       - title: 7.2/3.1
         url: /hu_aix_72.html
