Adding Veritas Infoscale 7.4.1 to sidebar

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -173,6 +173,8 @@ entries:
       entries:
       - title: Infoscale 7.3 and 7.3.1
         url: /hu_veritas_73.html
+      - title: Infoscale 7.4.1
+        url: /hu_veritas_74.html        
     - title: Windows
       entries:
       - title: 2019
