Adding NVMe RHEL 8.3 to the sidebar

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -13,6 +13,8 @@ entries:
         url: /nvme_rhel_81.html
       - title: 8.2
         url: /nvme_rhel_82.html
+      - title: 8.3
+        url: /nvme_rhel_83.html  
     - title: SUSE
       entries:
       - title: 15 SP1
