--- a/sidebar.yml
+++ b/sidebar.yml
@@ -14,7 +14,7 @@ entries:
       - title: 8.2
         url: /nvme_rhel_82.html
       - title: 8.3
-        url: /nvme_rhel_83.html  
+        url: /nvme_rhel_83.html
     - title: SUSE
       entries:
       - title: 15 SP1
@@ -167,6 +167,10 @@ entries:
           url: /hu_ol_65.html
         - title: 6.4
           url: /hu_ol_64.html
+    - title: ESXi
+      entries:
+      - title: VMware vSphere 7
+        url: /hu_vsphere_7.html
     - title: Citrix
       entries:
       - title: Hypervisor 8 and later
