--- a/sidebar.yml
+++ b/sidebar.yml
@@ -14,7 +14,7 @@ entries:
       - title: 8.2
         url: /nvme_rhel_82.html
       - title: 8.3
-        url: /nvme_rhel_83.html  
+        url: /nvme_rhel_83.html
     - title: SUSE
       entries:
       - title: 15 SP1
@@ -175,6 +175,8 @@ entries:
       entries:
       - title: Infoscale 7.3 and 7.3.1
         url: /hu_veritas_73.html
+      - title: Infoscale 7.4.1
+        url: /hu_veritas_74.html        
     - title: CentOS
       entries:
       - title: CentOS 8
