--- a/sidebar.yml
+++ b/sidebar.yml
@@ -5,6 +5,8 @@ entries:
     entries:
     - title: Linux Unified Host Utlities
       url: /hu_luhu_71.html
+    - title: Windows Unified Host Utlities
+      url: /hu_wuhu_72.html
   - title: NVMe/FC Host Configurations
     entries:
     - title: RHEL
@@ -176,7 +178,7 @@ entries:
       - title: Infoscale 7.3 and 7.3.1
         url: /hu_veritas_73.html
       - title: Infoscale 7.4.1
-        url: /hu_veritas_74.html        
+        url: /hu_veritas_74.html
     - title: CentOS
       entries:
       - title: CentOS 8
