--- a/sidebar.yml
+++ b/sidebar.yml
@@ -29,6 +29,8 @@ entries:
         url: /nvme_ol_82.html
       - title: 8.1
         url: /nvme_ol_81.html
+      - title: 7.9
+        url: /nvme_ol_79.html
       - title: 7.8
         url: /nvme_ol_78.html
       - title: 7.7
