added hu_aix 7.1

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -176,7 +176,7 @@ entries:
       - title: Infoscale 7.3 and 7.3.1
         url: /hu_veritas_73.html
       - title: Infoscale 7.4.1
-        url: /hu_veritas_74.html        
+        url: /hu_veritas_74.html
     - title: CentOS
       entries:
       - title: CentOS 8
@@ -223,6 +223,8 @@ entries:
       entries:
       - title: 7.2/3.1
         url: /hu_aix_72.html
+      - title: 7.1
+        url: /hu_aix_71.html
     - title: HP-UX
       entries:
       - title: 11i v3
