added hu_solaris 11.3

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -233,3 +233,5 @@ entries:
       entries:
       - title: 11.4
         url: /hu_solaris_114.html
+      - title: 11.3
+        url: /hu_solaris_113.html
