--- a/sidebar.yml
+++ b/sidebar.yml
@@ -7,7 +7,7 @@ entries:
       url: /hu_luhu_71.html
     - title: Windows Unified Host Utlities
       entries:
-      - title: 7.1
+      - title: "7.1"
       - url: /hu_wuhu_71.html
   - title: NVMe/FC Host Configurations
     entries:
