--- a/sidebar.yml
+++ b/sidebar.yml
@@ -6,7 +6,9 @@ entries:
     - title: Linux Unified Host Utlities
       url: /hu_luhu_71.html
     - title: Windows Unified Host Utlities
-    - url: /hu_wuhu_71.html
+      entries:
+      - title: 7.1
+      - url: /hu_wuhu_71.html
   - title: NVMe/FC Host Configurations
     entries:
     - title: RHEL
