--- a/sidebar.yml
+++ b/sidebar.yml
@@ -8,7 +8,7 @@ entries:
     - title: Windows Unified Host Utlities
       entries:
       - title: 7.1
-      - url: /hu_wuhu_71.html
+        url: /hu_wuhu_71.html
   - title: NVMe/FC Host Configurations
     entries:
     - title: RHEL
