Adding Xenserver 7 and later (Citrix 7.x) to the sidebar

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -91,6 +91,8 @@ entries:
       entries:
       - title: Hypervisor 8 and later
         url: /hu_citrix_8x.html
+      - title: Xenserver 7 and later
+        url: / hu_citrix_7x.html
     - title: ESXi
       entries:
       - title: VMware vSphere 7
