--- a/sidebar.yml
+++ b/sidebar.yml
@@ -89,9 +89,9 @@ entries:
           url: /hu_centos_70.html
     - title: Citrix
       entries:
-      - title: Hypervisor 8 and later
+      - title: Hypervisor 8
         url: /hu_citrix_8x.html
-      - title: Xenserver 7 and later
+      - title: Xenserver 7
         url: / hu_citrix_7x.html
     - title: ESXi
       entries:
@@ -233,9 +233,9 @@ entries:
       entries:
       - title: Infoscale 7.3 and 7.3.1
         url: /hu_veritas_73.html
-      - title: Infoscale 7.x
+      - title: Infoscale 7
         url: /hu_veritas_7x.html
-      - title: Storage Foundation 6.x
+      - title: Storage Foundation 6
         url: /hu_veritas_6x.html
     - title: Windows
       entries:
