Adding WUHU 7.1 to sidebar

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -5,6 +5,8 @@ entries:
     entries:
     - title: Linux Unified Host Utilities
       url: /hu_luhu_71.html
+    - title: Windows Unified Host Utilities
+      url: /hu_wuhu_71.html
   - title: NVMe/FC Host Configurations
     entries:
     - title: ESXi
