--- a/sidebar.yml
+++ b/sidebar.yml
@@ -89,6 +89,22 @@ entries:
           url: /hu_centos_71.html
         - title: "7.0"
           url: /hu_centos_70.html
+      - title: CentOS 6
+        entries:
+        - title: "6.10"
+          url: /hu_centos_610.html
+        - title: 6.9
+          url: /hu_centos_69.html
+        - title: 6.8
+          url: /hu_centos_68.html
+        - title: 6.7
+          url: /hu_centos_67.html
+        - title: 6.6
+          url: /hu_centos_66.html
+        - title: 6.5
+          url: /hu_centos_65.html
+        - title: 6.4
+          url: /hu_centos_64.html
     - title: Citrix
       entries:
       - title: Hypervisor 8
