--- a/sidebar.yml
+++ b/sidebar.yml
@@ -5,7 +5,7 @@ entries:
     entries:
     - title: Linux Unified Host Utilities
       url: /hu_luhu_71.html
-    - title: Windows Unified Host Utilities
+    - title: "Windows Unified Host Utilities"
       url: /hu_wuhu_71.html
   - title: NVMe/FC Host Configurations
     entries:
