Adding RHEL 8.4 doc

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -27,6 +27,8 @@ entries:
         url: /nvme_ol_77.html
     - title: RHEL
       entries:
+      - title: 8.4
+        url: /nvme_rhel_84.html
       - title: 8.3
         url: /nvme_rhel_83.html
       - title: 8.2
