Adding RHEL 8.4 document

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -157,6 +157,8 @@ entries:
       entries:
       - title: RHEL 8
         entries:
+        - title: 8.4
+          url: /hu_rhel_84.html
         - title: 8.3
           url: /hu_rhel_83.html
         - title: 8.2
