updates as per SME instruction 23 aug

--- a/sidebar.yml
+++ b/sidebar.yml
@@ -7,7 +7,7 @@ entries:
       url: /hu_luhu_71.html
     - title: Windows Unified Host Utilities
       url: /hu_wuhu_71.html
-  - title: NVMe/FC Host Configurations
+  - title: NVMe-oF Host Configurations
     entries:
     - title: ESXi
       entries:
