--- a/sidebar.yml
+++ b/sidebar.yml
@@ -35,6 +35,8 @@ entries:
         url: /nvme_rhel_81.html
     - title: SUSE
       entries:
+      - title: 15 SP3
+        url: /nvme_sles15_sp3.html
       - title: 15 SP2
         url: /nvme_sles15_sp2.html
       - title: 15 SP1
