Added HU Oracle Linux versions 8.3 and 8.4

--- a/project.yml
+++ b/project.yml
@@ -130,6 +130,10 @@ sidebar:
         entries:
         - title: OL 8
           entries:
+          - title: 8.4
+            url: /hu_ol_84.html
+          - title: 8.3
+            url: /hu_ol_83.html
           - title: 8.2
             url: /hu_ol_82.html
           - title: 8.1
