--- a/project.yml
+++ b/project.yml
@@ -8,6 +8,8 @@ sidebar:
         url: /hu_luhu_71.html
       - title: Windows Unified Host Utilities
         url: /hu_wuhu_71.html
+      - title: AIX Host Utilities
+        url: /hu_aix_61.html
     - title: NVMe-oF Host Configurations
       entries:
       - title: ESXi
