--- a/project.yml
+++ b/project.yml
@@ -114,8 +114,8 @@ sidebar:
         entries:
         - title: Hypervisor 8
           url: /hu_citrix_8x.html
-        - title: Xenserver 7
-          url: / hu_citrix_7x.html
+        - title: XenServer 7
+          url: /hu_citrix_7x.html
       - title: ESXi
         entries:
         - title: VMware vSphere 7
