added -pdf filename keyword in yml

--- a/project.yml
+++ b/project.yml
@@ -22,6 +22,7 @@ sidebar:
     - title: NVMe-oF Host Configurations
       entries:
       - title: ESXi
+      - pdf-filename: NVMe-oF Host Configuration for ESXi
         entries:
         - title: "7.0"
           url: /nvme_esxi_7.html
