--- a/project.yml
+++ b/project.yml
@@ -196,6 +196,8 @@ sidebar:
         entries:
         - title: RHEL 8
           entries:
+          - title: 8.5
+            url: /hu_rhel_85.html
           - title: 8.4
             url: /hu_rhel_84.html
           - title: 8.3
