--- a/project.yml
+++ b/project.yml
@@ -18,7 +18,7 @@ sidebar:
         url: /hu_hpux_60.html
       - title: Linux Unified Host Utilities
         url: /hu_luhu_71.html
-      - title: Solaris 62
+      - title: Solaris Host Utilities
         url: /hu_solaris_62.html
       - title: Windows Unified Host Utilities
         url: /hu_wuhu_71.html
