--- a/project.yml
+++ b/project.yml
@@ -13,10 +13,16 @@ sidebar:
     - title: SAN Host Utilities
       entries:
       - title: AIX Host Utilities
-        url: /hu_aix_61.html
+
+
       - title: HPUX Host Utilities
         url: /hu_hpux_60.html
       - title: Linux Unified Host Utilities
+        entries:
+        - title: 7.1
+          url: /hu_luhu_71.html
+        - title: Release Notes
+          url: /hu_luhu_71_rn.html
         url: /hu_luhu_71.html
       - title: Solaris Host Utilities
         url: /hu_solaris_62.html
