--- a/project.yml
+++ b/project.yml
@@ -19,7 +19,7 @@ sidebar:
         url: /hu_hpux_60.html
       - title: Linux Unified Host Utilities
         entries:
-        - title: 7.1
+        - title: Install LUHU 7.1
           url: /hu_luhu_71.html
         - title: Release Notes
           url: /hu_luhu_71_rn.html
