--- a/project.yml
+++ b/project.yml
@@ -13,7 +13,11 @@ sidebar:
     - title: SAN Host Utilities
       entries:
       - title: AIX Host Utilities
-        url: /hu_aix_61.html
+        entries:
+          - title: Install AIX HU 6.1
+            url: /hu_aix_61.html
+          - title: Release Notes
+            url: /hu_aix_61_rn.html
       - title: HPUX Host Utilities
         url: /hu_hpux_60.html
       - title: Linux Unified Host Utilities
