--- a/project.yml
+++ b/project.yml
@@ -13,6 +13,7 @@ sidebar:
     - title: SAN Host Utilities
       entries:
       - title: AIX Host Utilities
+        url: /hu_aix_61.html
       - title: HPUX Host Utilities
         url: /hu_hpux_60.html
       - title: Linux Unified Host Utilities
