--- a/project.yml
+++ b/project.yml
@@ -16,7 +16,8 @@ sidebar:
         entries:
           - title: Install AIX HU 6.1
             url: /hu_aix_61.html
-      
+          - title: Release Notes
+            url: /hu_aix_61_rn.html
       - title: HPUX Host Utilities
         url: /hu_hpux_60.html
       - title: Linux Unified Host Utilities
