--- a/project.yml
+++ b/project.yml
@@ -214,6 +214,10 @@ sidebar:
             url: /hu_ol_64.html
       - title: RHEL
         entries:
+        - title: RHEL 9
+          entries:
+          - title: 8.6
+            url: /hu_rhel_90.html
         - title: RHEL 8
           entries:
           - title: 8.6
