--- a/project.yml
+++ b/project.yml
@@ -18,9 +18,9 @@ sidebar:
             url: /hu_aix_61.html
           - title: Release Notes
             url: /hu_aix_61_rn.html
-      - title: HPUX Host Utilities
+      - title: HP-UX Host Utilities
         entries:
-         - title: Install HPUX HU 6.0
+         - title: Install HP-UX HU 6.0
            url: /hu_hpux_60.html
          - title: Release notes
            url: /hu_hpux_60_rn.html
