--- a/project.yml
+++ b/project.yml
@@ -76,6 +76,8 @@ sidebar:
       - title: SLES
         pdf-filename: NVMeoF SLES
         entries:
+        - title: 15 SP4
+          url: /nvme_sles15_sp4.html
         - title: 15 SP3
           url: /nvme_sles15_sp3.html
         - title: 15 SP2
