--- a/project.yml
+++ b/project.yml
@@ -76,8 +76,7 @@ sidebar:
       - title: SLES
         pdf-filename: NVMeoF SLES
         entries:
-        - title: 15 SP4
-          url: /nvme_sles15_sp4.html
+        
         - title: 15 SP3
           url: /nvme_sles15_sp3.html
         - title: 15 SP2
@@ -296,6 +295,8 @@ sidebar:
         entries:
         - title: SLES 15
           entries:
+          - title: 15 SP4
+            url: /hu_sles_15SP4.html
           - title: 15 SP3
             url: /hu_sles_15SP3.html
           - title: 15 SP2
