--- a/project.yml
+++ b/project.yml
@@ -16,8 +16,9 @@ sidebar:
         entries:
           - title: Install AIX HU 6.1
             url: /hu_aix_61.html
-          - title: Release Notes
+          - title: Release notes
             url: /hu_aix_61_rn.html
+          
       - title: HP-UX Host Utilities
         entries:
          - title: Install HP-UX HU 6.0
