--- a/project.yml
+++ b/project.yml
@@ -50,6 +50,8 @@ sidebar:
         entries:
         - title: OL 8
           entries:
+          - title: 8.5
+            url: /nvme_ol_85.html
           - title: 8.2
             url: /nvme_ol_82.html
           - title: 8.1
