--- a/project.yml
+++ b/project.yml
@@ -49,6 +49,7 @@ sidebar:
       - title: Oracle Linux
         entries:
         - title: OL 8
+          pdf-filename: NVMeF OL
           entries:
           - title: 8.5
             url: /nvme_ol_85.html
