--- a/project.yml
+++ b/project.yml
@@ -51,46 +51,47 @@ sidebar:
         - title: OL 8
           entries:
           - title: OL 8
-          entries:
+            pdf-filename: NVMeF OL
+            entries:
           - title: 8.2
-              url: /nvme_ol_82.html
-            - title: 8.1
-              url: /nvme_ol_81.html
+            url: /nvme_ol_82.html
+          - title: 8.1
+            url: /nvme_ol_81.html
         - title: OL 7
           entries:
           - title: OL 7
-          entries:
+            entries:
           - title: 7.9
-              url: /nvme_ol_79.html
-            - title: 7.8
-              url: /nvme_ol_78.html
-            - title: 7.7
-              url: /nvme_ol_77.html
+            url: /nvme_ol_79.html
+          - title: 7.8
+            url: /nvme_ol_78.html
+          - title: 7.7
+            url: /nvme_ol_77.html
       - title: RHEL
         pdf-filename: NVMeF RHEL
         entries:
         - title: RHEL 9
           entries:
           - title: RHEL 9
-          entries:
+            entries:
           - title: 9.0
-              url: /nvme_rhel_90.html
+            url: /nvme_rhel_90.html
         - title: RHEL 8
           entries:
           - title: RHEL 8
-          entries:
+            entries:
           - title: 8.6
-              url: /nvme_rhel_86.html
-            - title: 8.5
-              url: /nvme_rhel_85.html
-            - title: 8.4
-              url: /nvme_rhel_84.html
-            - title: 8.3
-              url: /nvme_rhel_83.html
-            - title: 8.2
-              url: /nvme_rhel_82.html
-            - title: 8.1
-              url: /nvme_rhel_81.html
+            url: /nvme_rhel_86.html
+          - title: 8.5
+            url: /nvme_rhel_85.html
+          - title: 8.4
+            url: /nvme_rhel_84.html
+          - title: 8.3
+            url: /nvme_rhel_83.html
+          - title: 8.2
+            url: /nvme_rhel_82.html
+          - title: 8.1
+            url: /nvme_rhel_81.html
       - title: SLES
         pdf-filename: NVMeoF SLES
         entries:
