SLES15 SP4 document

--- a/project.yml
+++ b/project.yml
@@ -88,6 +88,8 @@ sidebar:
         entries:
         - title: SLES 15
           entries:
+          - title: 15 SP4
+            url: /nvme_sles15_sp4.html
           - title: 15 SP3
             url: /nvme_sles15_sp3.html
           - title: 15 SP2
@@ -346,4 +348,3 @@ sidebar:
           url: /hu_windows_2016.html
         - title: "2012 R2"
           url: /hu_windows_2012r2.html
-          
