--- a/_index.yml
+++ b/_index.yml
@@ -47,12 +47,16 @@ indexpage:
           url: /nvme_ol_82.html
         - title: Red Hat Enterprise Linux 9.0
           url: /nvme_rhel_90.html
-         - title: SUSE Linux Enterprise Server 15 SP4
+        - title: SUSE Linux Enterprise Server 15 SP4
           url: /nvme_sles15_sp4.html
         - title: Windows Server 2019
           url: /nvme_windows_2019.html        
     - title: More resources
       links:
+        - title: Cloud Volumes ONTAP
+          url: https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html
+        - title: Amazon FSx for ONTAP 
+          url: https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html   
         - title: All SAN Array software configuration 
           url: https://docs.netapp.com/us-en/ontap/task_asa_software_configuration.html
         - title: SAN administration
