Adding titles to homepage

--- a/project.yml
+++ b/project.yml
@@ -14,8 +14,10 @@ product-family:
 
 sidebar:
   entries:
-    - title: Home
-      url: /index.html
+    - title: SAN host docs
+      url: /index.html  
+    - title: Overview
+      url: /overview.html
     - title: SAN host utilities
       entries:
       - title: AIX host utilities
