--- a/_index.yml
+++ b/_index.yml
@@ -6,13 +6,13 @@ indexpage:
     - title: Get started
       links:
         - title: AIX Release Notes
-          url: https://docs.netapp.com/us-en/ontap-sanhost/hu_aix_61_rn.html
+          url: /hu_aix_61_rn.html
         - title: HP-UX Release Notes
-          url: https://docs.netapp.com/us-en/ontap-sanhost/hu_hpux_60_rn.html
+          url: /hu_hpux_60_rn.html
         - title: Linux Release Notes
-          url: https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71_rn.html
+          url: /hu_luhu_71_rn.html
         - title: Solaris Release Notes
-          url: https://docs.netapp.com/us-en/ontap-sanhost/hu_solaris_62_rn.html                       
+          url: /hu_solaris_62_rn.html                       
     - title: FCP and iSCSI host configurations
       links:
         - title: AIX 7.2 and Power VM 3.1
