--- a/project.yml
+++ b/project.yml
@@ -104,6 +104,8 @@ sidebar:
             url: /nvme_sles15_sp1.html
       - title: Windows
         entries:
+        - title: 2022
+          url: /nvme_windows_2022.html
         - title: 2019
           url: /nvme_windows_2019.html
         - title: 2016
@@ -348,6 +350,8 @@ sidebar:
           url: /hu_veritas_6x.html
       - title: Windows
         entries:
+        - title: 2022
+          url: /hu_windows_2022.html
         - title: 2019
           url: /hu_windows_2019.html
         - title: 2016
