--- a/project.yml
+++ b/project.yml
@@ -193,6 +193,7 @@ sidebar:
       - title: Oracle Linux
         entries:
         - title: OL 8
+          pdf-filename: OL-8-FCP
           entries:
           - title: 8.6
             url: /hu_ol_86.html
@@ -209,6 +210,7 @@ sidebar:
           - title: 8.0
             url: /hu_ol_80.html
         - title: OL 7
+          pdf-filename: OL-7-FCP
           entries:
           - title: 7.9
             url: /hu_ol_79.html
@@ -231,6 +233,7 @@ sidebar:
           - title: "7.0"
             url: /hu_ol_70.html
         - title: OL 6
+          pdf-filename: OL-6-FCP
           entries:
           - title: "6.10"
             url: /hu_ol_610.html
@@ -249,10 +252,12 @@ sidebar:
       - title: RHEL
         entries:
         - title: RHEL 9
+          pdf-filename: RHEL-9-FCP
           entries:
           - title: 9.0
             url: /hu_rhel_90.html
         - title: RHEL 8
+          pdf-filename: RHEL-8-FCP
           entries:
           - title: 8.6
             url: /hu_rhel_86.html
@@ -269,6 +274,7 @@ sidebar:
           - title: 8.0
             url: /hu_rhel_80.html
         - title: RHEL 7
+          pdf-filename: RHEL-7-FCP
           entries:
           - title: 7.9
             url: /hu_rhel_79.html
@@ -291,6 +297,7 @@ sidebar:
           - title: 7.0
             url: /hu_rhel_70.html
         - title: RHEL 6
+          pdf-filename: RHEL-6-FCP
           entries:
           - title: "6.10"
             url: /hu_rhel_610.html
@@ -349,6 +356,7 @@ sidebar:
         - title: Storage Foundation 6
           url: /hu_veritas_6x.html
       - title: Windows
+        pdf-filename: Windows-FCP
         entries:
         - title: 2022
           url: /hu_windows_2022.html
