fixing last 2 PDFs

--- a/project.yml
+++ b/project.yml
@@ -191,6 +191,7 @@ sidebar:
         - title: 11i v3
           url: /hu_hpux_11iv3.html
       - title: Oracle Linux
+        pdf-filename: OL-FCP
         entries:
         - title: OL 8
           pdf-filename: OL-8-FCP
@@ -322,6 +323,7 @@ sidebar:
       - title: SLES
         entries:
         - title: SLES 15
+          pdf-filename: SLES-15-FCP
           entries:
           - title: 15 SP4
             url: /hu_sles_15SP4.html
