--- a/_index.yml
+++ b/_index.yml
@@ -5,52 +5,41 @@ indexpage:
   tiles:
     - title: Get started
       links:
-        - title: AIX Release Notes
+        - title: AIX host utilities release notes
           url: /hu_aix_61_rn.html
-        - title: HP-UX Release Notes
+        - title: HP-UX host utilities release notes
           url: /hu_hpux_60_rn.html
-        - title: Linux Release Notes
+        - title: Linux host utilities release notes
           url: /hu_luhu_71_rn.html
-        - title: Solaris Release Notes
+        - title: Solaris host utilities release notes
           url: /hu_solaris_62_rn.html                       
     - title: FCP and iSCSI host configurations
       links:
-        - title: AIX 7.2 and Power VM 3.1
-          url: /hu_aix_72.html
-        - title: CentOS 8.5
-          url: /hu_centos_85.html
-        - title: Citrix Hypervisor 8
-          url: /hu_citrix_8x.html
         - title: VMware vSphere 7
-          url: /hu_vsphere_7.html                    
-        - title: HP-UX 11i v3
-          url: /hu_hpux_11iv3.html
-        - title: Oracle Linux 8.6 
-          url: /hu_ol_86.html
-        - title: Oracle Linux 7.9
-          url: /hu_ol_79.html 
+          url: /hu_vsphere_7.html 
         - title: Red Hat Enterprise Linux 9.0
           url: /hu_rhel_90.html
-        - title: Solaris 11.4
-          url: /hu_solaris_114.html
         - title: SUSE Linux Enterprise Server 15 SP4
-          url: /hu_sles_15SP4.html    
-        - title: Veritas Infoscale 8
-          url: /hu_veritas_8x.html
-        - title: Windows 2019
-          url: /hu_windows_2019.html  
+          url: /hu_sles_15SP4.html 
+        - title: Windows Server 2022
+          url: /hu_windows_2022.html         
+        - title: IBM AIX 7.2 and PowerVM (VIOS 3.1)
+          url: /hu_aix_72.html
+        - title: Oracle Solaris 11.4
+          url: /hu_solaris_114.html
+
     - title: NVMe-oF host configurations
       links:
-        - title: ESXi 7.x
+        - title: VMware vSphere 7
           url: /nvme_esxi_7.html
-        - title: Oracle Linux 8.2
-          url: /nvme_ol_82.html
         - title: Red Hat Enterprise Linux 9.0
           url: /nvme_rhel_90.html
         - title: SUSE Linux Enterprise Server 15 SP4
           url: /nvme_sles15_sp4.html
-        - title: Windows Server 2019
-          url: /nvme_windows_2019.html        
+        - title: Windows Server 2022
+          url: /nvme_windows_2022.html   
+
+
     - title: More resources
       links:
         - title: Cloud Volumes ONTAP
