--- a/project.yml
+++ b/project.yml
@@ -52,7 +52,7 @@ sidebar:
       - title: ESXi
         pdf-filename: NVMeoF ESXi
         entries:
-        - title: 7.x
+        - title: VMware vSphere 7
           url: /nvme_esxi_7.html
       - title: Oracle Linux
         entries:
