Adding WUHU Release note to the tile

--- a/_index.yml
+++ b/_index.yml
@@ -12,7 +12,9 @@ indexpage:
         - title: Linux host utilities release notes
           url: /hu_luhu_71_rn.html
         - title: Solaris host utilities release notes
-          url: /hu_solaris_62_rn.html                       
+          url: /hu_solaris_62_rn.html 
+        - title: Windows host utilities release notes
+          url: /hu_wuhu_71_rn.html                       
     - title: FCP and iSCSI host configurations
       links:
         - title: VMware vSphere 7
