--- a/project.yml
+++ b/project.yml
@@ -84,6 +84,8 @@ sidebar:
             url: /nvme_rhel_90.html
         - title: RHEL 8
           entries:
+          - title: 8.7
+            url: /nvme_rhel_87.html
           - title: 8.6
             url: /nvme_rhel_86.html
           - title: 8.5
@@ -267,6 +269,8 @@ sidebar:
         - title: RHEL 8
           pdf-filename: RHEL-8-FCP
           entries:
+          - title: 8.7
+            url: /hu_rhel_87.html
           - title: 8.6
             url: /hu_rhel_86.html
           - title: 8.5
