--- a/project.yml
+++ b/project.yml
@@ -80,6 +80,8 @@ sidebar:
         entries:
         - title: RHEL 9
           entries:
+          - title: 9.1
+            url: /nvme_rhel_91.html
           - title: 9.0
             url: /nvme_rhel_90.html
         - title: RHEL 8
@@ -264,6 +266,8 @@ sidebar:
         - title: RHEL 9
           pdf-filename: RHEL-9-FCP
           entries:
+          - title: 9.1
+            url: /hu_rhel_91.html
           - title: 9.0
             url: /hu_rhel_90.html
         - title: RHEL 8
