--- a/project.yml
+++ b/project.yml
@@ -63,6 +63,8 @@ sidebar:
         - title: OL 8
           pdf-filename: NVMeF OL
           entries:
+          - title: 8.3
+            url: /nvme_ol_83.html
           - title: 8.2
             url: /nvme_ol_82.html
           - title: 8.1
