--- a/project.yml
+++ b/project.yml
@@ -48,6 +48,8 @@ sidebar:
         entries:
           - title: Install WUHU 7.1
             url: /hu_wuhu_71.html
+          - title: Install WUHU 7.2
+            url: /hu_wuhu_72.html
           - title: Release Notes
             url: /hu_wuhu_71_rn.html
 
