--- a/project.yml
+++ b/project.yml
@@ -70,6 +70,8 @@ sidebar:
         - title: OL 8
           pdf-filename: NVMeF OL
           entries:
+          - title: 8.7
+            url: /nvme_ol_87.html
           - title: 8.6
             url: /nvme_ol_86.html
           - title: 8.5
@@ -227,6 +229,8 @@ sidebar:
         - title: OL 8
           pdf-filename: OL-8-FCP
           entries:
+          - title: 8.7
+            url: /hu_ol_87.html
           - title: 8.6
             url: /hu_ol_86.html
           - title: 8.5
