--- a/_index.yml
+++ b/_index.yml
@@ -5,6 +5,8 @@ indexpage:
   tiles:
     - title: Get started
       links:
+        - title: SAN host configuration overview
+          url: /overview.html
         - title: AIX host utilities release notes
           url: /hu_aix_61_rn.html
         - title: HP-UX host utilities release notes
@@ -15,31 +17,14 @@ indexpage:
           url: /hu_solaris_62_rn.html 
         - title: Windows host utilities release notes
           url: /hu_wuhu_71_rn.html                       
-    - title: FCP and iSCSI host configurations
+    - title: Install and configure SAN hosts
       links:
-        - title: VMware vSphere 7
-          url: /hu_vsphere_7.html 
-        - title: Red Hat Enterprise Linux 9.0
-          url: /hu_rhel_90.html
-        - title: SUSE Linux Enterprise Server 15 SP4
-          url: /hu_sles_15SP4.html 
-        - title: Windows Server 2022
-          url: /hu_windows_2022.html         
-        - title: IBM AIX 7.2 and PowerVM (VIOS 3.1)
-          url: /hu_aix_72.html
-        - title: Oracle Solaris 11.4
-          url: /hu_solaris_114.html
-
-    - title: NVMe-oF host configurations
-      links:
-        - title: VMware vSphere 7
-          url: /nvme_esxi_7.html
-        - title: Red Hat Enterprise Linux 9.0
-          url: /nvme_rhel_90.html
-        - title: SUSE Linux Enterprise Server 15 SP4
-          url: /nvme_sles15_sp4.html
-        - title: Windows Server 2022
-          url: /nvme_windows_2022.html   
+        - title: Install SAN host utilities 
+          url: /hu_sanhost_index.html 
+        - title: Configure NVMe-oF hosts 
+          url: /hu_nvme_index.html  
+        - title: Configurr FCP and iSCSI hosts 
+          url: /hu_fcp_scsi_index.html  
 
 
     - title: More resources
