--- a/project.yml
+++ b/project.yml
@@ -69,6 +69,8 @@ sidebar:
         - title: OL 9
           pdf-filename: NVMeF OL
           entries:
+          - title: 9.2
+            url: /nvme_ol_92.html
           - title: 9.1
             url: /nvme_ol_91.html
           - title: 9.0
@@ -235,6 +237,8 @@ sidebar:
         entries:
         - title: OL 9
           entries:
+          - title: 9.2
+            url: /hu_ol_92.html
           - title: 9.1
             url: /hu_ol_91.html
           - title: 9.0
