--- a/project.yml
+++ b/project.yml
@@ -36,6 +36,8 @@ sidebar:
         entries:
         - title: Install LUHU 7.1
           url: /hu_luhu_71.html
+        - title: Sample command reference
+          url: /hu_luhu_71_cmd.html
         - title: Release notes
           url: /hu_luhu_71_rn.html
       - title: Solaris host utilities
