--- a/project.yml
+++ b/project.yml
@@ -98,6 +98,8 @@ sidebar:
             url: /nvme_ol_78.html
           - title: 7.7
             url: /nvme_ol_77.html
+        - title: Troubleshoot
+          url: /nvme_troubleshoot.html
       - title: RHEL
         pdf-filename: NVMeoF RHEL
         entries:
