GH129 minor edits

--- a/_index.yml
+++ b/_index.yml
@@ -7,19 +7,19 @@ indexpage:
       links:
         - title: Product overview
           url: /overview.html
-        - title: AIX host utilities release notes
+        - title: AIX Host Utilities release notes
           url: /hu_aix_61_rn.html
-        - title: HP-UX host utilities release notes
+        - title: HP-UX Host Utilities release notes
           url: /hu_hpux_60_rn.html
-        - title: Linux host utilities release notes
+        - title: Linux Host Utilities release notes
           url: /hu_luhu_71_rn.html
-        - title: Solaris host utilities release notes
+        - title: Solaris Host Utilities release notes
           url: /hu_solaris_62_rn.html 
-        - title: Windows host utilities release notes
+        - title: Windows Host Utilities release notes
           url: /hu_wuhu_71_rn.html                       
     - title: Install and configure SAN hosts
       links:
-        - title: Install SAN host utilities 
+        - title: Install SAN Host Utilities 
           url: /hu_sanhost_index.html 
         - title: Configure hosts with FCP and iSCSI 
           url: /hu_fcp_scsi_index.html 
