--- a/project.yml
+++ b/project.yml
@@ -18,29 +18,29 @@ sidebar:
       url: /index.html  
     - title: Overview
       url: /overview.html
-    - title: Install SAN host utilities
+    - title: Install SAN Host Utilities
       entries:
       - title: Overview
         url: /hu_sanhost_index.html
-      - title: AIX host utilities
+      - title: AIX Host Utilities
         entries:
           - title: Release notes
             url: /hu_aix_61_rn.html
           - title: Install AIX HU 6.1
             url: /hu_aix_61.html
-      - title: HP-UX host utilities
+      - title: HP-UX Host Utilities
         entries:
          - title: Release notes
            url: /hu_hpux_60_rn.html
          - title: Install HP-UX HU 6.0
            url: /hu_hpux_60.html 
-      - title: Linux unified host utilities
+      - title: Linux Unified Host Utilities
         entries:
         - title: Release notes
           url: /hu_luhu_71_rn.html
         - title: Install LUHU 7.1
           url: /hu_luhu_71.html
-      - title: Solaris host utilities
+      - title: Solaris Host Utilities
         entries:
           - title: Release notes
             url: /hu_solaris_62_rn.html
@@ -48,7 +48,7 @@ sidebar:
             url: /hu_solaris_62.html
       - title: Windows Unified Host Utilities
         entries:
-          - title: Release Notes
+          - title: Release notes
             url: /hu_wuhu_71_rn.html
           - title: Install WUHU 7.2
             url: /hu_wuhu_72.html
@@ -67,7 +67,7 @@ sidebar:
           url: /hu_aix_71.html
       - title: CentOS
         entries:
-        - title: Release Notes
+        - title: Release notes
           url: /hu_centos_asm_release_notes.html
         - title: CentOS 8
           entries:
@@ -142,7 +142,7 @@ sidebar:
       - title: Oracle Linux
         pdf-filename: OL-FCP
         entries:
-        - title: Release Notes
+        - title: Release notes
           url: /hu_ol_asm_release_notes.html
         - title: OL 9
           entries:
@@ -209,7 +209,7 @@ sidebar:
             url: /hu_ol_64.html
       - title: RHEL
         entries:
-        - title: Release Notes
+        - title: Release notes
           url: /hu_rhel_asm_release_notes.html
         - title: RHEL 9
           pdf-filename: RHEL-9-FCP
@@ -287,7 +287,7 @@ sidebar:
           url: /hu_solaris_113.html
       - title: SLES
         entries:
-        - title: Release Notes
+        - title: Release notes
           url: /hu_sles_asm_release_notes.html
         - title: SLES 15
           pdf-filename: SLES-15-FCP
