--- a/project.yml
+++ b/project.yml
@@ -42,6 +42,8 @@ sidebar:
         entries:
           - title: Install Solaris HU 6.2
             url: /hu_solaris_62.html
+          - title: Solaris command reference
+            url: /hu_solaris_62_cmd.html
           - title: Release notes
             url: /hu_solaris_62_rn.html
       - title: Windows Unified Host Utilities
