--- a/project.yml
+++ b/project.yml
@@ -154,6 +154,8 @@ sidebar:
           url: /nvme_windows_2016.html
         - title: "2012 R2"
           url: /nvme_windows_2012r2.html
+      - title: Troubleshoot
+        url: /troubleshoot.html
     - title: FCP and iSCSI host configurations
       entries:
       - title: AIX and PowerVM/VIOS
